--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=8088
+
+# Setting Database (MYSQL CONNECTOR)
+spring.datasource.url=jdbc:mysql://localhost:3306/db_sibkm
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Setting JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
